k8s/networking/cilium/gateway/Gateway.yaml
# The default Gateway for applications
# deployed to Community Cloud
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  # Out of the box we provide
  # Let's Encrypt integration
  name: cc-letsencrypt-web-gateway
  namespace: community-cloud
  labels:
    app.kubernetes.io/managed-by: "community-cloud"
spec:
  # We use the default Cilium gateway
  gatewayClassName: cilium
  # A default dummy listener
  listeners:
    - name: example-http
      port: 80
      protocol: HTTP
      hostname:  example
  # We allow listeners from the label
  # whereWereGoing=weDontNeedRoads
  # on the namespace. This allows some
  # default control at the cluster level
  # if there's a desire to prevent ingress/egress
  # outside of the cluster.
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          whereWereGoing: weDontNeedRoads
